# swapper

./: .env  .env.example  .eslintrc.js  .gitignore  Anchor.toml  Cargo.toml  DEPLOYMENT.md  DEPLOY_STEPS.md  DOWNLOAD_DEPLOY.md  README.md  REDEPLOYMENT_INSTRUCTIONS.md  eslint.config.js  index.html  install-solana.sh  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts  vite.config.ts.timestamp-1750234125278-fae7477c35c998.mjs  vitest.config.ts
.devcontainer/: Dockerfile  devcontainer.json
docs/: API_SETUP.md  DEVELOPER_GUIDE.md  SECURITY.md  SECURITY_FIXES.md
programs/nft-swap/: Cargo.toml
programs/nft-swap/src/: lib.rs
programs/swapper/src/: lib.rs
scripts/: create-collection.js  deploy-collection.sh  deploy.sh  fix-deployment.sh  get-sol.sh  quick-deploy.sh  secure-deploy.sh  setup-env.sh
src/: App.tsx  index.css
src/components/: AdminDashboard.tsx  CreatePoolModal.tsx  EditPoolModal.tsx  Header.tsx  NFTCard.tsx  ProgramDeployModal.tsx  SwapInterface.tsx  SwapModal.tsx
src/contexts/: WalletContext.tsx
src/hooks/: useAnchorProgram.ts
src/lib/: anchor.ts  devnet-apis.ts  enhanced-solana.ts  helius-api.ts  monitoring.ts  pool-manager.ts  real-collections.ts  real-devnet-collections.ts  security.ts  solana.ts  supabase.ts
src/test/: setup.ts
src/types/: nft_swap.ts
supabase/migrations/: 20250617125256_precious_lantern.sql  20250617125905_orange_snow.sql  20250617134254_dusty_tooth.sql  20250717192506_sparkling_haze.sql
tests/: nft-swap.ts
