[package]
name = "nft-swap"
version = "0.1.0"
description = "NFT Swap Program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "nft_swap"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
spl-token = "3.5.0"